# tack

./: .config.json  .gitignore  LICENSE.txt  README.md  README.txt  dune-project
config/: dune  get_cflags.ml
dune.lock/: lock.dune
lib/: config.ml  dune  editor.ml  events.ml  file_explorer.ml  files.ml  freetype.ml  freetype_stubs.c  keyboard.ml  modes.ml  opengl.ml  opengl_stubs.c  render.ml  rope.ml  rope_types.ml  sdl.ml  sdl_stubs.c  search.ml  stubs.c  stubs.h  stubs.ml  textarea_with_line_numbers.ml  ui.ml  ui_bounding_box_utils.ml  ui_events.ml  ui_globals.ml  ui_rendering.ml  ui_scrollcontainers.ml  ui_text_texture_info.ml  ui_textarea.ml  ui_textarea_with_line_numbers.ml  ui_types.ml  ui_utils.ml
lib/config/: dune  get_cflags.ml
lib/sdl_menu_bar/: Makefile  sdl_menu_bar.h  sdl_menu_bar.m
lib/stubs/: Makefile  stubs.c
ppx/: custom_ppx.ml  dune
test/: dune  test_editor.ml  test_limitless.ml  test_render.ml  test_rope.ml  test_search.ml
thoughts/: TODO.txt  core-logic.txt  debugging-utilities.txt  layout-rules.txt  performance-relating-to-text-input.txt  scrollcontainer-redesign.txt  sizing-logic.txt
