(lang dune 3.17)

(name tack)

(generate_opam_files true)

(source
 (github cod1r/tack))

(authors "Jason Ho jasonho353@gmail.com")

(maintainers "Jason Ho jasonho353@gmail.com")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name tack)
 (synopsis "a GUI text editor written in OCaml")
 (description "a GUI text editor written in OCaml")
 (depends ocaml ounit2)
 (tags
  ("editor" "ocaml")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
