(library
 (name limitless)
 (foreign_stubs
  (language c)
  (names stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/get_cflags.exe)))

(env
 (dev
  (flags
   (:standard -warn-error -26-27-32))))
