(library
 (name tack)
 (foreign_stubs
  (language c)
  (names stubs sdl_stubs opengl_stubs freetype_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries yojson unix))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ../config/get_cflags.exe)))

(env
 (dev
  (flags
   (:standard -warn-error -26-27-32-33))))
